--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.21",
     "react-reveal": "^1.2.2",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.37.5",
